<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/SystemId"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/SystemId" >
    </TextView>

    <TextView
        android:id="@+id/ManufactureId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ManufactureId" >
    </TextView>

    <TextView
        android:id="@+id/OrgId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/OrgId" >
    </TextView>

    <TextView
        android:id="@+id/ModelNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ModelNumber" >
    </TextView>

    <TextView
        android:id="@+id/SerialNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SerialNumber" >
    </TextView>

    <TextView
        android:id="@+id/FirmwareRevision"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/FirmwareRevision" >
    </TextView>

    <TextView
        android:id="@+id/HardwareRevision"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/HardwareRevision" >
    </TextView>

    <TextView
        android:id="@+id/SoftwareRevision"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SoftwareRevision" >
    </TextView>

    <TextView
        android:id="@+id/ManufactureName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ManufactureName" >
    </TextView>

    <TextView
        android:id="@+id/RegCertDataList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegCertDataList" >
    </TextView>

    <TextView
        android:id="@+id/BatteryLevel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/BatteryLevel" >
    </TextView>

</LinearLayout>